--- a/package.json
+++ b/package.json
@@ -8,11 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@popperjs/core": "^2.11.5",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-goodshare": "^1.6.1",
+    "vue-router": "4",
+    "vue-social-sharing": "^4.0.0-alpha4",
+    "vue3-burger-menu": "^1.1.1",
+    "vuelidate": "^0.7.7",
+    "workbox-core": "^6.5.3",
+    "workbox-precaching": "^6.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
