--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-barcode": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -20,6 +21,7 @@
     "bootstrap-icons": "^1.8.3",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "jsbarcode": "^3.11.5",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.6.1",
     "register-service-worker": "^1.7.2",
