--- a/package.json
+++ b/package.json
@@ -10,29 +10,39 @@
   "dependencies": {
     "@chenfengyuan/vue-barcode": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@owliehq/vue-addtohomescreen": "^1.4.1",
     "@popperjs/core": "^2.11.5",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "firebase": "^9.8.3",
     "jsbarcode": "^3.11.5",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.6.1",
+    "postcss": "^8.4.14",
     "register-service-worker": "^1.7.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "tailwindcss": "^3.1.3",
     "vue": "^3.2.13",
     "vue-goodshare": "^1.6.1",
     "vue-router": "4",
     "vue-social-sharing": "^4.0.0-alpha4",
+    "vue-socials": "^2.0.0-0",
     "vue3-burger-menu": "^1.1.1",
     "vuelidate": "^0.7.7",
+    "webpack": "^5.73.0",
     "workbox-core": "^6.5.3",
-    "workbox-precaching": "^6.5.3"
+    "workbox-precaching": "^6.5.3",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -47,6 +57,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^9.1.1"
+    "eslint-plugin-vue": "^9.1.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0"
   }
 }
